--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
 </head>
 <body>
   <ul id="messages"></ul>
-  <form action="">
+  <form id="chat-form" action="">
     <input id="m" autocomplete="off" /><button>Send</button>
   </form>
 
-  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script>
-  var socket = io();
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-  
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
-  });
+    var socket = io();
+    
+    $('#chat-form').submit(function(event){
+      event.preventDefault();
+      socket.emit('chat message', $('#m').val());
+      $('#m').val('');
+      return false;
+    });
+
+    socket.on('chat message', function(msg){
+      $('#messages').append($('<li>').text(msg));
+    });
   </script>
 </body>
 </html>
